# voicehs

./: .gitignore  README.md  makefile  pyproject.toml
src/configs/: voicehs.yaml
src/train/: base.py  lora.py  train.py
src/voicehs/configs/: 4090_24gb.yaml  voicehs.yaml
src/voicehs/train/: base.py  lora.py  train.py
